deploy/k8s/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-flaskhelloworld
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - host: flaskhelloworld.info
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: flaskhelloworld
            port:
              number: 5000
